# csv2json

./: config.py  csv2json.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  utils.py
src/: config.py  utils.py
src/csv2json/: csv2json.py
